# url-shortener

./: Cargo.toml  Dockerfile  README.md  urls.db
.github/workflows/: ci-cd.yml
src/: lib.rs  main.rs
tests/: api.rs
