[package]
name = "url-shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
anyhow = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite" ] }
url = "1.0"
[dev-dependencies]
# ما در تست‌هامون به این ابزارها نیاز داریم
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }