[package]
name = "url-shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
anyhow = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite" ] }
url = "1.0"
[dev-dependencies]
reqwest = {version = "0.11" ,features = ["json"]}
tokio = { version = "1", features = ["full"] }
axum = "0.6.20"
